# Proyecto-Habitabilidad

./: .gitignore  README.md  interfaz (3 pisos).py  interfaz.py  interfaz_6_pisos.py  pyproject.toml
Propagacion/: CreacionObjetos.py  analisis_habitabilidad.py  espacio.json  propagacion.py  test.py  test2.py  test3.py
Propagacion/objetos/: edificio.json  espacios.json  fuentes_luz.json  habitabilidad.json  materiales.json  paredes.json  sugerencias.json
Propagacion/objetos/espacios/: espacio1.json  espacio10.json  espacio11.json  espacio12.json  espacio13.json  espacio14.json  espacio15.json  espacio16.json  espacio17.json  espacio18.json  espacio19.json  espacio2.json  espacio20.json  espacio21.json  espacio22.json  espacio23.json  espacio24.json  espacio25.json  espacio26.json  espacio27.json  espacio28.json  espacio29.json  espacio3.json  espacio30.json  espacio4.json  espacio5.json  espacio6.json  espacio7.json  espacio8.json  espacio9.json
Propagacion/objetos/fuentes_luz/: fuente_luz1.json  fuente_luz2.json  fuente_luz3.json
Propagacion/objetos/habitabilidad/: habitabilidad1.json  habitabilidad2.json  habitabilidad3.json
Propagacion/objetos/materiales/: material.json  material1.json  material2.json  material3.json
modelado/: classActividad.py  classEdificio.py  classEspacios.py  classFuenteLuz.py  classHabitabilidad.py  classMaterial.py  classPared.py  matrizEdificio.py
objetos/: actividades.json  adjacency_matrix.csv  edificio.json  edificio_dia.json  edificio_noche.json  espacios.json  fuentes_luz.json  paredes.json  sugerencias.json
(+28 files in other folders)
