[project]
name = "proyecto-habitabilidad"
version = "0.1.0"
description = "Habitabilidad en sede Universidad Distrital"
authors = [
    {name = "Juancholoz",email = "juandiegolozada123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dash (>=2.18.2,<3.0.0)",
    "plotly (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
